# mm-forums-vector-db

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  no-overengineering.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
deploy/: cloud-init.yml  migrate_to_aws.sh  provision_hetzner.sh
docs/: docker-image-management.md  embedding-performance.md  how-rag-works.md
nginx/: nginx.conf
scripts/: query.py  run_embed.py  run_scrape.py
src/mm_forum/: config.py
src/mm_forum/analytics/: aggregate.py  semantic.py
src/mm_forum/db/: models.py  store.py
src/mm_forum/db/migrations/: env.py
src/mm_forum/db/migrations/versions/: d6ff3e007afc_initial_schema.py
src/mm_forum/embedder/: base.py  local.py  openai_embedder.py
src/mm_forum/pipeline/: embed.py  scrape.py
src/mm_forum/rag/: llm.py
src/mm_forum/scraper/: client.py  posts.py  topics.py
src/mm_forum/vectordb/: qdrant_store.py
tests/: conftest.py  test_embedder.py  test_qdrant_store.py  test_scraper.py  test_store.py
