[build-system]
requires = ["setuptools>=70", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-forums-vector-db"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "openai>=1.30",
    "pydantic-settings>=2.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres,qdrant]>=4.7",
    "respx>=0.21",
    "ruff>=0.4",
]
app = [
    "streamlit>=1.36",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["mm_forum"]
